--- a/src/app/labels/labels.component.html
+++ b/src/app/labels/labels.component.html
@@ -1,4 +1,4 @@
-<mat-card mat-card-title="Labels" style="width: 80%;">
+<mat-card mat-card-title="Labels">
   Entity Labels
   <mat-selection-list #list>
     <mat-list-option *ngFor="let l of labels"
