--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,56 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
-    <mat-toolbar color="primary">
-      <span>{{title}}</span>
-    </mat-toolbar>
+  <mat-toolbar color="primary">
+    <span>{{title}}</span>
+  </mat-toolbar>
 
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>Input Area</mat-card-title>
-      </mat-card-header>
-        <div fxLayout="row" fxLayoutAlign="space-around stretch">
-          <div fxFlex="60">
-            <app-inputarea ></app-inputarea>
-            <div fxLayout="row" fxLayoutAlign="space-between center"> 
-              <app-models></app-models>
-              <button mat-raised-button color="primary">Recognize</button>
-            </div>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Input Area</mat-card-title>
+    </mat-card-header>
+      <div fxLayout="row" fxLayoutAlign="space-around stretch">
+        <div fxFlex="60">
+          <app-inputarea ></app-inputarea>
+          <div fxLayout="row" fxLayoutAlign="space-between center"> 
+
+            <mat-form-field>
+              <mat-label>Model</mat-label>
+                  <mat-select placeholder="selectedModel"  [(ngModel)]="selectedModel" name="item">
+                    <mat-option *ngFor="let c of models" [value]="c">
+                      {{c.name}}
+                    </mat-option>
+                  </mat-select>
+            </mat-form-field>
+
+            <button mat-raised-button color="primary" (click)="recognize()">Recognize</button>
           </div>
-          <app-labels fxFlex="25"></app-labels>
         </div>
-    </mat-card>
 
+        <mat-card mat-card-title="Labels" fxFlex="25">
+          Entity Labels
+          <mat-selection-list #list>
+            <mat-list-option *ngFor="let l of labels"
+              [value]="l.name"
+              [selected]="l.selected"
+              (click)="labelOptionChange(list)">
+              {{l.name}}
+            </mat-list-option>
+          </mat-selection-list>
+        </mat-card>
+      </div>
+  </mat-card>
+
+  <div *ngIf="showOutput">
     <mat-card style="text-align:left">
       <mat-card-header>
         <mat-card-title>Output Area</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <app-outputarea></app-outputarea>
+        <div [innerHTML]="response.html | safeHtml" class="entities"></div>
       </mat-card-content>
     </mat-card>
   </div>
+</div>
+
 
 <router-outlet></router-outlet>
