--- a/src/app/inputarea/inputarea.component.html
+++ b/src/app/inputarea/inputarea.component.html
@@ -2,5 +2,11 @@
   <textarea matInput placeholder="Input Text"
     mat-autosize="true"
     matAutosizeMinRows="15"
-    cols="80"></textarea>
+    cols="80"
+    [(ngModel)]="value"
+    (ngModelChange)="change()"></textarea>
+  <button (click)="hello()">debug</button>
+  <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+    <mat-icon>close</mat-icon>
+  </button>
 </mat-form-field>
