--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
                   </mat-select>
             </mat-form-field>
 
+                <input class="ng-hide" id="input-file-id" multiple type="file" />
+                <label for="input-file-id" class="md-button md-raised md-primary">Choose Files</label>
+
             <button mat-raised-button color="primary" (click)="recognize()">Recognize</button>
           </div>
         </div>
