--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
         <mat-card-title>Output Area</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <div [innerHTML]="response.html | safeHtml" class="entities"></div>
+        <div [innerHTML]="output | safeHtml" class="entities"></div>
       </mat-card-content>
     </mat-card>
   </div>
