--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
           </div>
         </div>
 
-        <div fxFlex="25">
+        <div fxFlex="25" fxLayout="column"> 
             <mat-form-field>
               <mat-label>Model</mat-label>
                   <mat-select placeholder="selectedModel"  [(ngModel)]="selectedModel" name="item">
