--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -72,6 +72,42 @@ mat-toolbar-row {
 [data-entity][data-entity="MIS"] ~ [data-entity="MIS"]:hover:after {
   opacity: 1;
 }
+[data-entity][data-entity="TME"] {
+  border-bottom-color: #123048;
+}
+[data-entity][data-entity="TME"]:after {
+  color: #2fbbab;
+}
+[data-entity][data-entity="TME"] ~ [data-entity="TME"]:after {
+  opacity: 0;
+}
+[data-entity][data-entity="TME"] ~ [data-entity="TME"]:hover:after {
+  opacity: 1;
+}
+[data-entity][data-entity="NUM"] {
+  border-bottom-color: #784565;
+}
+[data-entity][data-entity="NUM"]:after {
+  color: #2fbbab;
+}
+[data-entity][data-entity="NUM"] ~ [data-entity="NUM"]:after {
+  opacity: 0;
+}
+[data-entity][data-entity="NUM"] ~ [data-entity="NUM"]:hover:after {
+  opacity: 1;
+}
+[data-entity][data-entity="FCP"] {
+  border-bottom-color: #239857;
+}
+[data-entity][data-entity="FCP"]:after {
+  color: #2fbbab;
+}
+[data-entity][data-entity="FCP"] ~ [data-entity="FCP"]:after {
+  opacity: 0;
+}
+[data-entity][data-entity="FCP"] ~ [data-entity="FCP"]:hover:after {
+  opacity: 1;
+}
 [data-entity][data-entity="LOC"] {
   border-bottom-color: #34ba65;
 }
