--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -76,7 +76,7 @@ mat-toolbar-row {
   border-bottom-color: #123048;
 }
 [data-entity][data-entity="TME"]:after {
-  color: #2fbbab;
+  color: #123048;
 }
 [data-entity][data-entity="TME"] ~ [data-entity="TME"]:after {
   opacity: 0;
@@ -88,7 +88,7 @@ mat-toolbar-row {
   border-bottom-color: #784565;
 }
 [data-entity][data-entity="NUM"]:after {
-  color: #2fbbab;
+  color: #784565;
 }
 [data-entity][data-entity="NUM"] ~ [data-entity="NUM"]:after {
   opacity: 0;
@@ -100,7 +100,7 @@ mat-toolbar-row {
   border-bottom-color: #239857;
 }
 [data-entity][data-entity="FCP"]:after {
-  color: #2fbbab;
+  color: #239857;
 }
 [data-entity][data-entity="FCP"] ~ [data-entity="FCP"]:after {
   opacity: 0;
@@ -112,7 +112,7 @@ mat-toolbar-row {
   border-bottom-color: #34ba65;
 }
 [data-entity][data-entity="LOC"]:after {
-  color: #2fbbab;
+  color: #34ba65;
 }
 [data-entity][data-entity="LOC"] ~ [data-entity="LOC"]:after {
   opacity: 0;
