--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -97,10 +97,10 @@ mat-toolbar-row {
   opacity: 1;
 }
 [data-entity][data-entity="FCP"] {
-  border-bottom-color: #239857;
+  border-bottom-color: #987b45;
 }
 [data-entity][data-entity="FCP"]:after {
-  color: #239857;
+  color: #987b45;
 }
 [data-entity][data-entity="FCP"] ~ [data-entity="FCP"]:after {
   opacity: 0;
